fixed footer spacing - #13

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,6 @@ a:active {
   }
 
   h3 {
-    bottom: 50px;
+    bottom: 150px;
   }
 }
